testsuite/tests/linear/should_fail/Linear17.stderr

Linear17.hs:17:3: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘x’
    • In a stmt of a 'do' block: x <- ()
      In the expression:
        do x <- ()
           (y, z) <- ((), ())
           () <- y
           () <- z
           ....
      In an equation for ‘incorrectDo1’:
          incorrectDo1
            = do x <- ()
                 (y, z) <- ((), ())
                 () <- y
                 ....

Linear17.hs:25:6: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘z’
    • In the pattern: (y, z)
      In a stmt of a 'do' block: (y, z) <- ((), x)
      In the expression:
        do x <- ()
           (y, z) <- ((), x)
           () <- y
           ()

Linear17.hs:30:3: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘x’
    • In a stmt of a 'do' block: x <- ()
      In the expression:
        do x <- ()
           (y, z) <- (x, x)
           () <- y
           () <- z
           ....
      In an equation for ‘incorrectDo3’:
          incorrectDo3
            = do x <- ()
                 (y, z) <- (x, x)
                 () <- y
                 ....
